# Nexus

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README  README.md  build.sh  cmake_install.cmake  dev.ps1  dev.zsh  electron-builder.yaml  hosts.txt  index.html  maifest.json  main.js  mix.exs  package-lock.json  package.json  popup.html  pubspec.yaml  requirements.txt  setup.zsh  styles.css  tsconfig.json  webpack.config.js  webpack.renderer.config.js
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/cfdf747ee705af326adb61495cb2776e/: .filecache  gen_dart_plugin_registrant.stamp  kernel_snapshot_program.d  linux_engine_sources.d  outputs.json  unpack_linux.stamp
.github/: dependabot.yml
.github/workflows/: apisec-scan.yml  ci-cd.yml  ci.yml  ethicalcheck.yml
Rust Build/: Cargo.toml  build.rs
Rust Build/src/: bridge_generated.rs  lib.rs
Rust Build/src/renderer/: css_parser.rs  html_parser.rs
Rust Build/src/ui/: ad_blocker.rs  ai_engine.rs  bookmarks.rs  extensions.rs  mod.rs  navigation.rs  pubspec.yaml  settings.rs
Rust Build/templates/: settings.html
Rust-Build/src/: bridge_generated.rs  lib.rs  main.rs
Rust-Build/src/renderer/: css_parser.rs  html_parser.rs  mod.rs
Rust-Build/src/ui/: ad_blocker.rs  ai_engine.rs  bookmarks.rs  downloads.rs  extension_manager.rs  extensions.rs  html_template.rs  mod.rs  navigation.rs  pubspec.yaml  settings.rs  tab_manager.rs  theme.rs
Rust-Build/templates/: devtools.html  main.html  settings.html
Unmaintained Rust Build/: Cargo.toml  build.rs
Unmaintained Rust Build/src/: bridge_generated.rs  main.rs
Unmaintained Rust Build/src/renderer/: css_parser.rs
Unmaintained Rust Build/src/ui/: ad_blocker.rs  ai_engine.rs  bookmarks.rs  downloads.rs  extension_manager.rs  extensions.rs  html_template.rs  mod.rs  navigation.rs  pubspec.yaml  tab_manager.rs  theme.rs
Unmaintained Rust Build/src/ui/lib/: main.dart
Unmaintained Rust Build/templates/: devtools.html  main.html  settings.html
backend/: .env.development  .env.production  .envrc  .formatter.exs  .gitignore  README.md  mix.exs  package.json  tsconfig.json
backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
backend/lib/: backend.ex  backend_web.ex
backend/lib/backend/: application.ex  auth.ex  catalog.ex  endpoint.ex  error_handler.ex  mailer.ex  repo.ex  router.ex
backend/lib/backend_web/: cors.ex  endpoint.ex  gettext.ex  openapi.ex  router.ex  telemetry.ex
backend/src/: index.ts
backend/src/db/: index.ts  schema.ts
backend/src/routes/: auth.ts  example.ts
backend/test/: test_helper.exs
backend/test/backend/: accounts_test.exs  auth_test.exs  catalog_test.exs
backend/test/support/: api_case.ex  auth_helpers.ex  channel_case.ex  conn_case.ex  data_case.ex
cmake/: FindTensorFlow.cmake
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md
frontend/: Cargo.toml  README.md  package-lock.json  package.json  pubspec.yaml
frontend/lib/: main.dart
frontend/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frontend/project.inlang/: project_id
frontend/src/: main.rs
frontend/styles/: styles.css
include/: AIEngine.h  AdBlocker.h  Download.h  ExtensionManager.h  Navigation.h  Settings.h  TabManager.h
lib/: main.dart
lib/nexus/: ad_blocker.ex  application.ex  bookmark_manager.ex  browser_engine.ex  cache_manager.ex  download_manager.ex  history_manager.ex  http_client.ex  network_interceptor.ex  password_manager.ex  privacycrypto.hash(  security_filter.ex  settings_manager.ex  tab_manager.ex
lib/nexus_ui/lib/: main.dart
lib/nexus_web/: router.ex
lib/nexus_web/channels/: browser_channel.ex  user_socket.ex
lib/screens/: home_screen.dart  web_view_screen.dart
lib/services/: ad_blocker.dart
lib/widgets/: navigation_buttons.dart  settings_manager.dart  tab_manager.dart  url_bar.dart  web_view_tab.dart
linux_webview/: pubspec.yaml
linux_webview/lib/: linux_webview.dart
linux_webview/linux/: CMakeLists.txt  linux_webview_plugin.cc
linux_webview/linux/include/linux_webview/: linux_webview_plugin.h
public/: index.html
public/templates/: main.html
scripts/: adblocker.js  navigation.js  preload.js  settings.js  tabs.js
src/: AIEngine.cpp  AdBlocker.cpp  ExtensionManager.cpp  index.html  lib.rs  main.cpp  main.rs  main.seo  renderer.ts
src/ai_integration/: seokjin_ai.ts
src/backend/cache/: resource.zy  strategy.zy
src/backend/engine/: core.zy  page.seo  renderer.zy
src/backend/network/: stack.zy
src/backend/protocols/: http.zy  http3.zy
src/backend/security/: tls.seo  tls.zy
src/core/ai/: seokjin.zy
src/core/debug/: inspector.seo  profiler.zy
src/core/dev/: remote.zy  tools.zy
src/core/engine/: engine.zy
src/core/io/: async.zy
src/core/memory/: allocator.zy  optimizer.seo
src/core/monitoring/: debug.zy  logger.zy  performance.zy  profiler.zy
src/core/network/: stack.seo
src/core/perf/: branch.seo  cache.seo  gpu_accelerated.seo  lockfree.zy  memory_pool.zy  network.zy  optimizer.seo  parallel.zy  predictor.seo  render_optimized.zy  renderer.seo  scheduler.zy  simd.seo  zero_copy.seo
src/core/performance/: optimizer.zy
src/frontend/: window.zy
src/main/: main.ts
src/preload/: preload.ts
src/renderer/: CssParser.cpp  HtmlParser.cpp  Render.cpp  css_parser.cpp  html_parser.cpp  html_parser.rs  mod.rs  renderer.cpp  renderer.tsx  themes.ts
src/types/: global.d.ts  node-fetch.d.ts  seokjin-ai.d.ts
src/ui/: Bookmarks.cpp  Download.cpp  Navigation.cpp  Settings.cpp  TabManager.cpp  ad_blocker.rs  extensions.rs  mod.rs  navigation.rs  settings.rs  tab_manager.rs
src/utils/: adBlocker.ts  bookmarkManager.ts  downloadManager.ts  extensionManager.ts  fingerPrintResistance.ts  parser.ts  settings.ts  sleepingTabs.ts  tabManager.ts  theme.ts
styles/: styles.css
themes/: FuchsiaDark.css  NebulaPurple.css
(+101 files in other folders)
