[package]
name = "nexus"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
wry = "0.24"
html5ever = "0.26"
cssparser = "0.29"
url = "2.3"
log = "0.4"
env_logger = "0.10"
markup5ever_rcdom = "0.2"

[features]
default = []
dev = ["env_logger/default"]

[profile.dev]
opt-level = 0
debug = true