[package]
name = "nexus"
version = "0.0.3"
edition = "2021"

[dependencies]
wry = "0.24"
log = "0.4"
serde_json = "1.0"
url = "2.3"
regex = "1.7"
rayon = "1.7"
fnv = "1.0"
ahash = "0.8"
smallvec = "1.10"
env_logger = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
dev = ["env_logger"]