[package]
name = "nexus"
version = "0.0.3"
edition = "2021"

[dependencies]
wry = "0.28"
log = "0.4"
serde_json = "1.0"
url = "2.4"
regex = "1.9"
rayon = "1.7"
fnv = "1.0"
ahash = "0.8"
smallvec = "1.11"
env_logger = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
cssparser = "0.31"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
dev = ["env_logger"]