[package]
name = "nexus"
version = "0.0.3"
edition = "2021"

[dependencies]
wry = "0.35.0"
log = "0.4.20"
serde_json = "1.0.107"
url = "2.4.1"
regex = "1.9.5"
rayon = "1.7.0"
fnv = "1.0.7"
ahash = "0.8.3"
smallvec = "1.11.1"
env_logger = { version = "0.10.0", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
directories = "5.0.1"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
cssparser = "0.31.2"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
flutter_rust_bridge = "1.82.1"
reqwest = { version = "0.11.20", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.0"
webkit2gtk = "2.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["d2d1", "dwrite"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
core-graphics = "0.23.1"

[build-dependencies]
flutter_rust_bridge_codegen = "1.82.1"

[[bin]]
name = "nexus"
path = "src/main.rs"

[lib]
name = "nexus_lib"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
dev = ["env_logger"]