[package]
name = "frontend"
version = "0.0.1"
edition = "2021"

[dependencies]
futures-util = "0.3.31"  # Correct crate name!
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.89"
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]